--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -14,6 +14,7 @@ PASSWORD: {{.Pass}}<br>
 {{else}}
 <h1>LOGIN</h1>
 <form method="post">
+   <input type="hidden" name="token" value="{{.}}">
    <input type="text" name="username" placeholder="username">
    <input type="password" name="password" placeholder="password">
    <input type="submit">
